# llvm-project

./: README.md
clang/examples/AnnotateFunctions/: AnnotateFunctions.cpp  CMakeLists.txt
clang/examples/PrintFunctionNames/: CMakeLists.txt
clang/include/clang/Basic/: Attr.td  TokenKinds.def
clang/include/clang/Parse/: Parser.h
clang/include/clang/Sema/: TaffoHint.h
clang/lib/CodeGen/: CGStmt.cpp  CodeGenFunction.h
clang/lib/Parse/: ParseExpr.cpp  ParsePragma.cpp  ParseStmt.cpp
clang/lib/Sema/: SemaStmtAttr.cpp
clang/tools/clang-format-vs/: source.extension.vsixmanifest.in
clang/tools/clang-format-vs/ClangFormat/: ClangFormatPackage.cs  Guids.cs  PkgCmdID.cs
llvm/docs/PDB/: CodeViewTypes.rst
llvm/test/tools/llvm-ar/: mri-nonascii.test
llvm/test/tools/llvm-rc/Inputs/: tokens.rc
llvm/tools/msbuild/: LLVM.Cpp.Common.props  llvm-general.xml  llvm.csproj  llvm.sln
llvm/tools/msbuild/Platformx64/: Toolset.props
llvm/tools/msbuild/Platformx86/: Toolset.props
